examples/deployments/k8s/argilla-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argilla-server-deployment
  labels:
    app: argilla-server
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: argilla-server
  template:
    metadata:
      labels:
        app: argilla-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: role
                operator: In
                values:
                - argilla-server
      containers:
        - name: argilla-server
          image: extralit/argilla-server:latest
          ports:
            - containerPort: 6900
          resources:
            requests:
              memory: 1024Mi
              cpu: 1000m
            limits:
              memory: 6144Mi
              cpu: 4000m
          volumeMounts:
            - name: elasticsearch-master-certs
              mountPath: /usr/share/elasticsearch/config/certs
      volumes:
        - name: elasticsearch-master-certs
          secret:
            secretName: elasticsearch-master-certs
            optional: true
