examples/deployments/k8s/extralit-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extralit-server
  labels:
    app: extralit-server
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: extralit-server
  template:
    metadata:
      labels:
        app: extralit-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: role
                operator: In
                values:
                - extralit-server
      containers:
        - name: extralit-server
          image: extralit/extralit-server:latest
          ports:
            - containerPort: 6900
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
          volumeMounts:
            - name: elasticsearch-master-certs
              mountPath: /usr/share/elasticsearch/config/certs
      volumes:
        - name: elasticsearch-master-certs
          secret:
            secretName: elasticsearch-master-certs
            optional: true
