examples/deployments/k8s/vector-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-admin-deployment
  labels:
    app: vector-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector-admin
  template:
    metadata:
      labels:
        app: vector-admin
    spec:
      containers:
      - name: vector-admin
        image: mintplexlabs/vectoradmin:latest
        ports:
        - containerPort: 3001
