examples/deployments/k8s/aim-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aim-service
spec:
  selector:
    app: aim-observability
  ports:
    - protocol: TCP
      port: 80
      targetPort: 43800
