examples/deployments/k8s/argilla-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extralit-server-lb
  labels:
    app: extralit-server-lb
spec:
  type: LoadBalancer
  selector:
    app: extralit-server
  ports:
    - name: http
      port: 80
      targetPort: 6900
