examples/deployments/k8s/extralit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extralit-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extralit
  template:
    metadata:
      labels:
        app: extralit
    spec:
      containers:
        - name: extralit-server
          image: extralit-server
          ports:
            - containerPort: 5555
          readinessProbe:
            httpGet:
              path: /health
              port: 5555
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - extralit
---
apiVersion: v1
kind: Service
metadata:
  name: extralit-server
spec:
  selector:
    app: extralit
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
  type: NodePort
