examples/deployments/k8s/extralit-storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extralit-server
spec:
  selector:
    app: extralit
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
  type: NodePort
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: extralit-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 50Gi
#   storageClassName: local-path
