examples/deployments/k8s/phoenix-deployment.yaml
# portkey-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arizephoenix
  labels:
    app: arizephoenix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arizephoenix
  template:
    metadata:
      labels:
        app: arizephoenix
    spec:
      containers:
      - name: arizephoenix
        image: arizephoenix/phoenix:latest
        ports:
        - containerPort: 6006
        volumeMounts:
        - name: storage
          mountPath: /phoenix/projects
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: arizephoenix-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: arizephoenix
spec:
  selector:
    app: arizephoenix
  ports:
    - protocol: TCP
      port: 6006
      targetPort: 6006
