examples/deployments/k8s/extralit-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extralit-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - argilla-hostname
    secretName: extralit-server-tls
  rules:
  - host: argilla-hostname
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: extralit-server
              port:
                number: 6900
